--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -14,6 +14,7 @@
 						last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
 					</div>
 				</div>
+				<% if logged_in? && current_user == article.user %>
 				<div class="article-actions">
 					<%= link_to "Edit this article", edit_article_path(article), 
 									class: "btn btn-xs btn-primary" %> 
@@ -21,6 +22,7 @@
 			method: :delete, data: { confirm: "Are you sure you want to delete the article?"},
 									class: "btn btn-xs btn-danger" %>
 				</div>
+				<% end %>
 			</div>
 		</div>
 	</div>
