--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,7 +9,7 @@
 				<%= link_to gravatar_for(@article.user), user_path(@article.user) %>
 			</li>
 			<li class="article-title">
-				<%= link_to(@article.user.username, user_path(@article.user)) if @artile.user%>
+				<%= link_to(@article.user.username, user_path(@article.user)) if @article.user%>
 			</li>
 			<li>
 				<small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
@@ -23,12 +23,13 @@
 	<h4 class="center description"><strong>Description:</strong></h4>
 	<hr>
 	<%= simple_format(@article.description) %>
-
 	<div class="article-actions">
+	<% if logged_in? && current_user == @article.user %>
 		<%= link_to "Edit this article", edit_article_path(@article), 
 									class: "btn btn-xs btn-primary" %> 
 		<%= link_to "Delete this article", article_path(@article), 
 			method: :delete, data: { confirm: "Are you sure you want to delete the article?"},class: "btn btn-xs btn-danger" %>
+	<% end %>
 		<%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
 	</div>
 </div>
