--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,12 +28,14 @@ $navbar-default-bg: black;
 }
 
 .jumbotron h1 {
+	margin-top: 100px;
 	color: red;
 	text-align: center;
 	margin-bottom: 30px;
 	letter-spacing: -1px;
 	font-weight: bold;
 }
+
 
 .btn-xlarge {
 	font-size:1.7em;
